crates/toml_edit/tests/snapshots/invalid/array/double-comma-01.stderr
TOML parse error at line 1, column 22
  |
1 | double-comma-01 = [1,,2]
  |                      ^
extra comma in array, expected value
